tests/invalid/key_starts_digit.nano
..
    person..
        1name value
